// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchbar renders correctly with mobile size 1`] = `
.c0 {
  border-radius: 8px;
  font-size: 18px;
  border: none;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c1 {
  background-color: transparent;
  box-shadow: rgb(0,0,0,0.15) 0px 5px 12px;
  height: 50px;
  width: 100%;
  padding: 0 10px 0 18px;
  border-radius: 24px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  top: 2px;
  margin-right: 16px;
}

.c4 svg {
  width: 16px;
  height: 16px;
}

.c4 svg path {
  stroke-width: 2;
}

.c6 {
  font-size: 16px;
  font-weight: 500;
}

<button
  className="c0 c1"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="c2"
    style={Object {}}
  >
    <div
      className="c3 c4"
      style={Object {}}
    >
      <svg
        viewBox="0 0 56.966 56.966"
      >
        <path
          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
        />
      </svg>
    </div>
    <p
      className="c5 c6"
      style={Object {}}
    >
      Where are you going?
    </p>
  </div>
</button>
`;

exports[`Searchbar renders correctly with normal size 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  margin: 0;
  font-family: 'Airbnb-Cereal';
}

.c0 {
  background-color: transparent;
  border: 1px solid;
  height: 50px;
  width: 260px;
  padding: 0 7px 0 18px;
  border-radius: 24px;
}

.c3 {
  font-size: 14px;
}

.c4 {
  width: 32px;
  height: 32px;
  background: -webkit-linear-gradient( right, rgb(230,30,77) 0%, rgb(227,28,95) 50%, rgb(215,4,102) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
}

.c6 {
  position: relative;
}

.c6 svg {
  width: 12px;
  height: 12px;
  stroke: #ffffff;
}

.c6 svg path {
  fill: #ffffff;
  stroke-width: 2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
  onPress={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    style={Object {}}
  >
    <p
      className="c2 c3"
      style={Object {}}
    >
      Start your search
    </p>
    <div
      className="c4"
      style={Object {}}
    >
      <div
        className="c5 c6"
        style={Object {}}
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
